style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins%3Awght%40100%3B200%3B300%3B400%3B500%3B600&display=swap%27%29%3B');

:root {
    --primary-color: #0077b6;
    --bg-color: #17202b;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
}

body {
    width: 100%;
    height: auto;
    overflow-x: hidden;
    background-color: var(--bg-color);
    overflow-x: hidden;
}

/* Custom ScrollBar CSS */
::-webkit-scrollbar {
    width: 10px;
}
::-webkit-scrollbar-track {
    background: #f1f1f1;
}
::-webkit-scrollbar-thumb {
    background: var(--primary-color);
    border-radius: 12px;
    transition: all 0.3s ease;
}
::-webkit-scrollbar-thumb:hover {
    background: var(--primary-color);
}

/* Navbar Styling */
nav {
    width: 100%;
    height: 10vh;
}

.nav-container {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.logo {
    color: white;
    font-size: 2rem;
    font-weight: bold;
}

.logo span {
    color: var(--primary-color);
    text-shadow: 0 0 10px var(--primary-color);
}

.hamburg,
.cancel {
    cursor: pointer;
    position: absolute;
    right: 15px;
    top: 10px;
    color: white;
    opacity: 0;
    pointer-events: none;
    font-size: clamp(2.5rem, 0.5rem + 5vw, 3rem);
}

.nav-container .links {
    display: flex;
}

.nav-container .links a {
    position: relative;
    font-size: 1.2rem;
    color: white;
    margin: 0 20px;
    text-decoration: none;
    font-weight: 550;
    transition: 0.3s linear;
}

.nav-container .links a::before {
    position: absolute;
    content: "";
    bottom: -3px;
    left: 0;
    width: 0%;
    height: 3px;
    background-color: var(--primary-color);
    transition: 0.2s linear;
}

.nav-container .links a:hover::before {
    width: 100%;
}

.nav-container .links a:hover {
    color: var(--primary-color);
}

.dropdown {
    z-index: 100;
    position: absolute;
    top: 0;
    transform: translateY(-500px);
    width: 100%;
    height: auto;
    backdrop-filter: blur(4px) brightness(40%);
    box-shadow: 0 0 20px black;
    transition: 0.2s linear;
}

.dropdown .links a {
    display: dlex;
    color: white;
    text-decoration: none;
    justify-content: center;
    padding: 15px;
    align-items: center;
    transition: 0.2s linear;
}

.dropdown .links a:hover {
    background-color: var(--primary-color);
}

section {
    width: 100%;
    min-height: 90vh;
}

section .main-container {
    display: flex;
    justify-content: space-between;
    padding-left: 100px;
    align-items: center;
}

.main-container .image {
    width: 500px;
    height: 80vh;
    border-radius: 100%;
    overflow: hidden;
    box-shadow: 0 0 10px var(--primary-color);
}

.main-container .image img {
    width: 100%;
}

.main-container .image:hover {
    animation: animate 1.5s ease-in-out infinite;
}

@keyframes animate {
    0%{
        scale: 1;
    }

    50%{
        scale: 1.05;
    }

    100%{
        scale: 1;
    }
}

.main-container .content {
    color: white;
    width: 40%;
}

.content h1 {
    font-size: clamp(1rem, 1rem + 5vw, 1.8rem);
}

.content h1 span {
    color: var(--primary-color);
    text-shadow: 0 0 10px var(--primary-color);
}

.content .typewriter {
    font-size: clamp(1rem, 1rem + 5vw, 2.5rem);
    font-weight: 600;
}

.content .typewriter-text {
    color: var(--primary-color);
    text-shadow: 0 0 10px var(--primary-color);
}

.content .typewriter span {
    position: relative;
}

.content .typewriter span::before {
    content: "Software Developer";
    color: var(--primary-color);
    animation: words 20s infinite;
}

.content .typewriter span::after {
    content: "";
    background-color: var(--bg-color);
    position: absolute;
    width: calc(100% +8px);
    border-left: 3px solid black;
    right: -8;
    animation: cursor 0.6s infinite;
}

@keyframes cursor {
    to {
        border-left: 3px solid var(--primary-color);
    }
}
@keyframes words {
    0%, 33% {
        content: "WeThinkCode Graduate";
    }
    34%, 66% {
        content: "Fullstack Developer";
    }
    67%, 100% {
        content: "Aspiring Java Developer";
    }
}

.content p {
    font-size: clamp(0.4rem, 0.2rem + 9vw, 1rem);
    margin: 10px 0;
}

.social-links i {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 3rem;
    height: 3rem;
    background-color: transparent;
    border: 0.rem solid var(--primary-color);
    border-radius: 50%;
    color: var(--primary-color);
    margin: 5px 15px;
    font-size: 1.5rem;
    transition: 0.2s linear;
}

.social-links i:hover {
    scale: 1.3;
    color: var(--bg-color);
    background-color: var(--primary-color);
    filter: drop-shadow(0 0 10px var(--primary-color));
}

.content button {
    width: 50%;
    height: 6vh;
    margin: 30px;
    background-color: var(--primary-color);
    color: white;
    border: none;
    outline: none;
    font-size: 120%;
    font-weight: 700;
    border-radius: 5px;
    transition: 0.2s linear;
}

.content button:hover {
    scale: 1.1;
    color: var(--primary-color);
    border: 2px solid var(--primary-color);
    background-color: transparent;
    font-weight: 700;
    box-shadow: 0 0 40px var(--primary-color);
}

/* About Section Styling */
.section .content {
    width: 80%;
    margin: 0px auto;
    font-family: 'Poppins', sans-serif;
}

.about .about-details {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

section .title {
    display: flex;
    justify-content: center;
    margin-bottom: 40px;
}

section .title span {
    color: white;
    font-size: 30px;
    font-weight: 600;
    position: relative;
    padding-bottom: 8px;
}

section .title span::before,
section .title span::after {
    content: "";
    position: absolute;
    height: 3px;
    width: 100%;
    background: var(--primary-color);
    left: 0;
    bottom: 0;
}

section .title span::after {
    bottom: -7px;
    width: 70%;
    left: 50%;
    transform: translateX(-50%);
}

.about .about-details .left {
    width: 45%;
}

.about .left img {
    height: 400px;
    width: 400px;
    object-fit: cover;
    border-radius: 12px;
}

.about-details .right {
    width: 55%;
}

section .topic {
    color: white;
    font-size: 25px;
    font-weight: 500;
    margin-bottom: 10px;
}

.about-details .right p {
    text-align: justify;
    color: white;
}

section .button {
    margin: 16px 0;
}

section .button button {
    outline: none;
    padding: 8px 16px;
    border-radius: 4px;
    font-size: 25px;
    font-weight: 400;
    background: var(--primary-color);
    color: #fff;
    border: 2px solid transparent;
    cursor: pointer;
    transition: all 0.4 ease;
}

section .button button:hover {
    border-color: var(--primary-color);
    background-color: #fff;
    color: var(--primary-color);
}

/* My Skills Section */
.skills {
    background-color: var(--bg-color);
}

.skills .content {
    padding: 40px 0;
}

.skills .skills-details {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.skills-details .text {
    width: 50%;
}

.skills-details p {
    color: white;
    text-align: justify;
}

.skills .skills-details .experience {
    display: flex;
    align-items: center;
    margin: 0 10px;
}

.skills-details .experience .num {
    color: white;
    font-size: 80px;
}

.skills-details .experience .exp {
    color: white;
    margin-left: 20px;
    font-size: 18px;
    font-weight: 500;
    margin: 0 6px;
}

.skills-details .boxes {
    width: 45%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.skills-details .box {
    width: calc(100% / 2 - 20px);
    margin: 20px 0;
}

.skills-details .boxes .topic {
    font-size: 20px;
    color: var(--primary-color);
}

.skills-details .boxes .per {
    font-size: 60px;
    color: var(--primary-color);
}

/* My Services Section */
.services .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.services .boxes .box {
    margin: 20px 0;
    width: calc(100% / 3 - 20px);
    text-align: center;
    border-radius: 12px;
    padding: 30px 10px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
    cursor: default;
    color: white;
    transition: all 0.4s ease;
}

.services .boxes .box:hover{
    background: var(--primary-color);
    color: #fff;
}

.services .boxes .box .icon {
    height: 50px;
    width: 50%;
    background: var(--primary-color);
    border-radius: 50%;
    text-align: center;
    line-height: 50px;
    font-size: 18px;
    color: #fff;
    margin: 0 auto 10px auto;
    transition: all 0.4s ease;
}

.boxes .box:hover .icon {
    background-color:  #fff;
    color: var(--primary-color);
}

.services .boxes .box:hover .topic,
.services .boxes .box:hover p {
    color: white;
    transition: all 0.4s ease;
}

.services .boxes .box:hover .topic,
.services .boxes .box:hover p {
    color: #fff;
}

/* Contact Me Section */
.contact {
    background: var(--bg-color);
}

.contact .content {
    margin: 0 auto;
    padding: 30px 0;
}

.contact .text {
    width: 80%;
    text-align: center;
    margin: auto;
    color: white;
}

/* Footer Section */
footer {
    background-color: var(--primary-color);
    padding: 15px 0;
    text-align: center;
    font-family: 'Poppins' sans-serif;
}

footer .text span {
    font-size: 17px;
    font-weight: 400;
    color: #fff;
}

footer .text span a {
    font-weight: 500;
    color: #fff;
}

footer .text span a:hover {
    text-decoration: underline;
}

.scroll-button a {
    position: fixed;
    bottom: 20px;
    right: 20px;
    columns: #fff;
    background-color: var(--primary-color);
    padding: 7px 12px;
    font-size: 18px;
    border-radius: 6px;
    box-shadow: rgba(0, 0, 0, 0.15);
    display: none;
}

@media (max-width: 1000px) {
    .about .about-details {
        justify-content: center;
        flex-direction: column;
    }

    .about .about-details .left {
        display: flex;
        justify-content: center;
        width: 100%;
    }

    .about .about-details .right {
        width: 90%;
        margin: 40px 0;
    }

    .services .boxes .box {
        margin: 20px 0;
        width: calc(100% / 2 - 20px);
    }
}

@media (max-width: 900px) {
    .about .left img {
        height: 350px;
        width: 350px;
    }
}

@media (max-width: 968px) {
    .nav .logo {
        position: absolute;
        top: 16px;
        left: 15px;
        font-size: 1.5rem;
    }

    section .main-container {
        padding-left: 0px;
        display: flex;
        flex-direction: column;
    }

    .nav-container .links {
        display: none;
    }

    .hamburg,
    .cancel {
        opacity: 1;
        pointer-events: visible;
    }

    .main .content {
        margin-top: 20px;
        width: 80%;
    }

    .social-links i {
        width: 2.5rem;
        height: 2.5rem;
        font-size: 1.5rem;
    }

    .main-container .image {
        z-index: -1;
        width: 50%;
        height: 60%;
    }

    .skills .skills-details {
        align-items: center;
        justify-content: center;
        flex-direction: column;
    }

    .skills-details .text {
        width: 100%;
        margin-bottom: 50px;
    }

    .skills-details .boxes {
        justify-content: center;
        align-items: center;
        width: 100%;
    }

    .services .boxes .box {
        margin: 20px 0;
        width: 100%;
    }

    .contact .text {
        width: 100%;
    }
}

@media (max-width: 500px) {
    .main-container image {
        width: 50%;
        height: 60%;
        margin-bottom: 0px;
    }

    .main-container .content {
        width: 80%;
    }

    .main-container button {
        margin-top: 15px;
    }

    .skills-details .boxes .per {
        font-size: 50px;
        color: var(--primary-color);
    }
}

